[metadata]
name = hass-am43-gw
summary = AM43 MQTT Gateway
author = Erno Kuvaja
author_email = jokke@ilujo.net
description = AM43 blinds motor service implementing Home Assistant mqtt discovery
home_page = https://github.com/jokke-ilujo/hass-am43-gw
python_requires = >=3.6
classifiers =
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: Apache License 2,0',
    'Operating System :: POSIX :: Linux',
[files]
data_files =
    etc/hass_am43 =
        etc/hass_am43.conf
packages=
    hass_am43
[entry_points]
console_scripts =
    hass_am43 = hass_am43.cmd.hass_am43:main
oslo.config.opts =
    hass_am43 = hass_am43.config:list_opts
[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
